sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: '=' expected but ';' found.
	var changed ;  
                    ^